データベースのバーコード部分の定義を変えたり、文字を変えたり

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,15 +20,14 @@
 
     <!-- タイトル -->
     <string name="app_name">DBSample</string>
-    <string name="name_selectsheet_product">品名一覧画面</string>
+    <string name="name_selectsheet_product">バーコード一覧画面</string>
     <string name="name_selectsheet_listview">ListView表示画面</string>
     <string name="name_selectsheet_tabel">TableLayout表示画面</string>
 
     <!-- ここからactivity_main 01関連 -->
-    <string name="text01_product">品名</string>
-    <string name="text01_madein">産地</string>
-    <string name="text01_number">個数</string>
-    <string name="text01_price">単価</string>
+    <string name="text01_product">バーコード</string>
+    <string name="text01_madein">品名</string>
+    <string name="text01_number">廃棄日</string>
     <string name="text01_kome">※</string>
     <string name="text01_hinttext">全角・半角12文字以内</string>
     <string name="text01_hintnumber">半角数字</string>
@@ -36,7 +35,7 @@
     <string name="button01_show">表示</string>
 
     <!-- 選択用RadioButton -->
-    <string name="radio01_product">品名一覧 (ListView×ArrayAdapter)</string>
+    <string name="radio01_product">バーコード一覧 (ListView×ArrayAdapter)</string>
     <string name="radio01_listview">ListView表示 (ListView×BaseAdapter)</string>
     <string name="radio01_tablelayout">TableLayout表示</string>
     <!-- ここまで -->
@@ -44,21 +43,20 @@
     <!-- ここからselect_sheet_product 02関連 -->
     <!-- select_sheet_product 02 -->
     <string name="text02_title_detail">ListViewを表示する為にArrayAdapterを使ってシンプルに品名だけをリスト表示します。</string>
-    <string name="text02_title">品名一覧</string>
+    <string name="text02_title">バーコード一覧</string>
     <string name="button02_alldelete">全削除</string>
 
     <!-- row_sheet_listview 05 -->
-    <string name="text05_title_madein">産地：</string>
-    <string name="text05_title_number">個数：</string>
-    <string name="text05_title_price">単価：</string>
+    <string name="text05_title_madein">品名：</string>
+    <string name="text05_title_number">廃棄日：</string>
     <!-- ここまで -->
 
     <!-- select_sheet_listview 03 -->
     <string name="text03_title_detail">BaseAdapterを使いListViewをカスタムしてリスト表示します。</string>
 
     <!-- select_sheet_table 04 -->
-    <string name="text04_title_detail">SearchViewを使って品名を検索し、DBから取得したデータをTableRowに加えていく表示の仕方です。</string>
-    <string name="text04_hinttext">品名を入力して下さい。</string>
+    <string name="text04_title_detail">SearchViewを使ってバーコードを検索し、DBから取得したデータをTableRowに加えていく表示の仕方です。</string>
+    <string name="text04_hinttext">バーコードを入力して下さい。</string>
     <string name="button04_search">検索</string>
 
 </resources>
