--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="text01_kome">※</string>
     <string name="text01_hinttext">全角・半角12文字以内</string>
     <string name="text01_hintnumber">半角数字</string>
+    <string name="text01_hintdate">mm/dd</string>
     <string name="button01_regist">登録</string>
     <string name="button01_show">表示</string>
 
@@ -47,8 +48,9 @@
     <string name="button02_alldelete">全削除</string>
 
     <!-- row_sheet_listview 05 -->
-    <string name="text05_title_madein">品名：</string>
-    <string name="text05_title_number">廃棄日：</string>
+    <string name="text05_title_product">バーコード:</string>
+    <string name="text05_title_madein">品名:</string>
+    <string name="text05_title_number">廃棄日:</string>
     <!-- ここまで -->
 
     <!-- select_sheet_listview 03 -->
